# Web-Scrapping-Project

./: .env.example  .gitignore  README.md  data.json  main.py  pyproject.toml
src/: llm.py  oxylabs_client.py  services.py  tinydb.py
